# home-iot-hub

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig
.github/workflows/: build.yml
components/: CMakeLists.txt  application.cpp  device_mikettle.c  device_mikettle.cpp  hub_ble.c  hub_ble.cpp  hub_ble_mac.cpp  hub_device.cpp  hub_device_factory.cpp  hub_device_list.c  hub_device_list.cpp  hub_device_manager.cpp  hub_dispatch_queue.c  hub_dispatch_queue.cpp  hub_event.cpp  hub_filesystem.cpp  hub_json.cpp  hub_mqtt.c  hub_mqtt.cpp  hub_mutex.cpp  hub_task.cpp  hub_test.c  hub_test_cases.c  hub_test_mqtt.c  hub_test_utils.c  hub_test_wifi.c  hub_wifi.c  hub_wifi.cpp
components/async/: CMakeLists.txt  dispatch_queue.cpp  mutex.cpp  task.cpp
components/async/include/: dispatch_queue.hpp  lock.hpp  mutex.hpp  task.hpp
components/ble/: CMakeLists.txt  ble.cpp  characteristic.cpp  client.cpp  descriptor.cpp  mac.cpp  scanner.cpp  service.cpp
components/ble/include/: ble.hpp  characteristic.hpp  client.hpp  descriptor.hpp  hub_ble.hpp  mac.hpp  scanner.hpp  service.hpp
components/devices/xiaomi_mikettle/: CMakeLists.txt  xiaomi_mikettle.cpp
components/error/include/: error.hpp  result.hpp
components/event/: CMakeLists.txt
components/event/include/: event.hpp
components/filesystem/: CMakeLists.txt  filesystem.cpp
components/hub-app/: CMakeLists.txt  application.cpp  cleanup.cpp  connected.cpp  init.cpp  not_connected.cpp  running.cpp
components/hub-app/include/app/: application.hpp  cleanup.hpp  configuration.hpp  connected.hpp  consts.hpp  fsm.hpp  init.hpp  not_connected.hpp  operations.hpp  running.hpp
components/hub-async/: CMakeLists.txt  dispatch_queue.cpp  mutex.cpp  task.cpp
components/hub-async/include/async/: dispatch_queue.hpp  lock.hpp  mutex.hpp  task.hpp
components/hub-async/include/async/rx/: filter.hpp  join.hpp  operators.hpp  sink.hpp  traits.hpp  transform.hpp
components/hub-ble/: CMakeLists.txt  ble.cpp  characteristic.cpp  client.cpp  descriptor.cpp  mac.cpp  scanner.cpp  service.cpp
components/hub-ble/include/ble/: ble.hpp  characteristic.hpp  client.hpp  descriptor.hpp  errc.hpp  event.hpp  mac.hpp  scanner.hpp  service.hpp
components/hub-devices/: CMakeLists.txt  xiaomi-mikettle.cpp
components/hub-devices/include/: device_base.hpp  xiaomi-mikettle.hpp
components/hub-devices/xiaomi_mikettle/: CMakeLists.txt  xiaomi_mikettle.cpp
components/hub-event/: CMakeLists.txt
components/hub-event/include/event/: event.hpp
components/hub-filesystem/: CMakeLists.txt  filesystem.cpp
components/hub-filesystem/include/filesystem/: filesystem.hpp
components/hub-mappers/: CMakeLists.txt
components/hub-mappers/include/mappers/: mappers.hpp
components/hub-mqtt/: CMakeLists.txt  client.cpp
components/hub-mqtt/include/mqtt/: client.hpp
components/hub-service/: CMakeLists.txt  ble.cpp  mqtt.cpp  mqtt_client.cpp  scanner.cpp
components/hub-service/include/service/: ble.hpp  filter.hpp  join.hpp  mqtt.hpp  mqtt_client.hpp  operators.hpp  ref.hpp  scanner.hpp  sink.hpp  sink_operator.hpp  traits.hpp  transform.hpp
components/hub-timing/include/timing/: timing.hpp
components/hub-utils/: CMakeLists.txt  esp_exception.cpp  mac.cpp
components/hub-utils/include/utils/: const_map.hpp  esp_exception.hpp  fsm.hpp  json.hpp  mac.hpp  result.hpp
components/hub-wifi/: CMakeLists.txt  wifi.cpp
components/hub-wifi/include/wifi/: wifi.hpp
components/include/: application.h  device_mikettle.h  hub_ble.h  hub_ble_defines.h  hub_ble_global.h  hub_ble_mac.h  hub_const_map.h  hub_device.h  hub_device_factory.h  hub_device_list.h  hub_device_manager.h  hub_dispatch_queue.h  hub_event.h  hub_filesystem.h  hub_json.h  hub_lock.h  hub_mqtt.h  hub_mutex.h  hub_semaphore_lock.h  hub_task.h  hub_test.h  hub_test_cases.h  hub_test_mqtt.h  hub_test_utils.h  hub_test_wifi.h  hub_timing.h  hub_utils.h  hub_wifi.h
components/json/: CMakeLists.txt  json.cpp
components/json/include/: json.hpp
components/mqtt/include/: mqtt.hpp
components/mqtt_client/: CMakeLists.txt  mqtt.cpp
components/mqtt_client/include/: mqtt.hpp
components/service/: CMakeLists.txt  ble_service.cpp  mqtt_service.cpp
components/service/include/: ble_service.hpp  mqtt_service.hpp  service_filter.hpp  service_operators.hpp  service_ref.hpp  service_traits.hpp  service_transform.hpp  sink_operator.hpp
components/timing/include/: timing.hpp
components/utils/: CMakeLists.txt
components/utils/include/: const_map.hpp  json.hpp  result.hpp
components/wifi/: CMakeLists.txt  wifi.cpp
components/wifi/include/: wifi.hpp
main/: CMakeLists.txt  Kconfig.projbuild  hub_main.c  hub_mqtt.c  hub_wifi.c  hub_wifi.h  main.c  main.cpp
test/: hub_test.py  mqtt_test.py
